--- a/index.html
+++ b/index.html
@@ -6,21 +6,28 @@
   <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliado seguros e atualizados.">
   <meta property="og:title" content="Centro de Compras - Ofertas e Descontos">
   <meta property="og:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
-  <meta property="og:image" content="logos/centrodecompras.jpg">
+  <meta property="og:image" content="logos/webp/centrodecompras.webp">
   <meta property="og:url" content="https://centrodecompra.com.br/">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Centro de Compras - Ofertas e Descontos">
   <meta name="twitter:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
-  <meta name="twitter:image" content="logos/centrodecompras.jpg">
+  <meta name="twitter:image" content="logos/webp/centrodecompras.webp">
   <title>Centro de Compras - Ofertas do Dia</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <!-- Pré-carregamento de recursos críticos -->
+  <link rel="preload" href="logos/webp/centrodecompras.webp" as="image">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="site-header">
     <div class="logo-container">
       <a href="#">
-        <img src="logos/centrodecompras.jpg" alt="Centro de Compras" id="site-logo">
+        <picture>
+          <source srcset="logos/webp/centrodecompras.webp" type="image/webp">
+          <img src="logos/centrodecompras.jpg" alt="Centro de Compras" id="site-logo" width="150" height="50">
+        </picture>
       </a>
     </div>
     <div class="header-text">
@@ -64,27 +71,45 @@
               <span>Todas as Lojas</span>
             </div>
             <div class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')">
-              <img src="logos/amazon.png" alt="Amazon" loading="lazy">
+              <picture>
+                <source srcset="logos/webp/amazon.webp" type="image/webp">
+                <img src="logos/amazon.png" alt="Amazon" loading="lazy" width="100" height="40">
+              </picture>
               <span>Amazon</span>
             </div>
             <div class="loja" data-loja="magalu" onclick="filtrarPorLoja('magalu')">
-              <img src="logos/magalu.png" alt="Magalu" loading="lazy">
+              <picture>
+                <source srcset="logos/webp/magalu.webp" type="image/webp">
+                <img src="logos/magalu.png" alt="Magalu" loading="lazy" width="100" height="40">
+              </picture>
               <span>Magalu</span>
             </div>
             <div class="loja" data-loja="shein" onclick="filtrarPorLoja('shein')">
-              <img src="logos/shein.png" alt="Shein" loading="lazy">
+              <picture>
+                <source srcset="logos/webp/shein.webp" type="image/webp">
+                <img src="logos/shein.png" alt="Shein" loading="lazy" width="100" height="40">
+              </picture>
               <span>Shein</span>
             </div>
             <div class="loja" data-loja="shopee" onclick="filtrarPorLoja('shopee')">
-              <img src="logos/shopee.png" alt="Shopee" loading="lazy">
+              <picture>
+                <source srcset="logos/webp/shopee.webp" type="image/webp">
+                <img src="logos/shopee.png" alt="Shopee" loading="lazy" width="100" height="40">
+              </picture>
               <span>Shopee</span>
             </div>
             <div class="loja" data-loja="mercadolivre" onclick="filtrarPorLoja('mercadolivre')">
-              <img src="logos/mercadolivre.jpg" alt="Mercado Livre" loading="lazy">
+              <picture>
+                <source srcset="logos/webp/mercadolivre.webp" type="image/webp">
+                <img src="logos/mercadolivre.jpg" alt="Mercado Livre" loading="lazy" width="100" height="40">
+              </picture>
               <span>Mercado Livre</span>
             </div>
             <div class="loja" data-loja="alibaba" onclick="filtrarPorLoja('alibaba')">
-              <img src="logos/alibaba.png" alt="Alibaba" loading="lazy">
+              <picture>
+                <source srcset="logos/webp/alibaba.webp" type="image/webp">
+                <img src="logos/alibaba.png" alt="Alibaba" loading="lazy" width="100" height="40">
+              </picture>
               <span>Alibaba</span>
             </div>
           </div>
@@ -104,19 +129,39 @@
 
       <div class="social-links">
         <a href="https://www.tiktok.com/@cdc.centraldecompras" target="_blank">
-          <div class="icon"><img src="logos/tiktok.jpg" alt="TikTok" loading="lazy"></div>
+          <div class="icon">
+            <picture>
+              <source srcset="logos/webp/tiktok.webp" type="image/webp">
+              <img src="logos/tiktok.jpg" alt="TikTok" loading="lazy" width="40" height="40">
+            </picture>
+          </div>
           <span>TikTok</span>
         </a>
         <a href="https://www.instagram.com/cdccentrodecompras/" target="_blank">
-          <div class="icon"><img src="logos/instagram.jpg" alt="Instagram" loading="lazy"></div>
+          <div class="icon">
+            <picture>
+              <source srcset="logos/webp/instagram.webp" type="image/webp">
+              <img src="logos/instagram.jpg" alt="Instagram" loading="lazy" width="40" height="40">
+            </picture>
+          </div>
           <span>Instagram</span>
         </a>
         <a href="https://x.com/ComprasCdc" target="_blank">
-          <div class="icon"><img src="logos/x.png" alt="X" loading="lazy"></div>
+          <div class="icon">
+            <picture>
+              <source srcset="logos/webp/x.webp" type="image/webp">
+              <img src="logos/x.png" alt="X" loading="lazy" width="40" height="40">
+            </picture>
+          </div>
           <span>X</span>
         </a>
         <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank">
-          <div class="icon"><img src="logos/youtube.png" alt="YouTube" loading="lazy"></div>
+          <div class="icon">
+            <picture>
+              <source srcset="logos/webp/youtube.webp" type="image/webp">
+              <img src="logos/youtube.png" alt="YouTube" loading="lazy" width="40" height="40">
+            </picture>
+          </div>
           <span>YouTube</span>
         </a>
       </div>
@@ -142,11 +187,14 @@
 
   <div class="robo-assistente">
     <a href="https://wa.me/5521975179737" target="_blank">
-      <img src="imagens/robo.jpg" alt="Robô Assistente" class="robo-imagem" loading="lazy">
+      <picture>
+        <source srcset="imagens/webp/robo.webp" type="image/webp">
+        <img src="imagens/robo.jpg" alt="Robô Assistente" class="robo-imagem" loading="lazy" width="60" height="60">
+      </picture>
       <div class="robo-texto">Posso ajudar?</div>
     </a>
   </div>
 
-  <script src="script.js"></script>
+  <script defer src="script.js"></script>
 </body>
 </html>
